summative.moria.Moria.scala.error
Compilation error:
Moria:5: error: value &&! is not a member of Boolean
  } while((!estSurBiscuit())&&(!estFaceMur())&&!(getCouleurSol() == Color.GREEN))
                                             ^